--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Check Conversion</title>
+    <title>User/Product Management</title>
   </head>
   <body>
     <noscript>
